--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <p class="mensaje">!Haz click en la tarjeta!</p>
+    <p class="mensaje">¡Haz click en la tarjeta!</p>
 
     <div class="credit-card">
 
@@ -96,5 +96,6 @@
     <script src="index.js"></script>
 
 </body>
+
 
 </html>
